--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.9",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.9",
     "@angular/compiler": "~11.2.9",
     "@angular/core": "~11.2.9",
     "@angular/forms": "~11.2.9",
+    "@angular/material": "^11.2.8",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "gsap": "^3.6.1",
+    "ngx-owl-carousel-o": "^5.0.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "swiper": "^6.5.6",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
