--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "gsap": "^3.6.1",
     "ngx-owl-carousel-o": "^5.0.0",
     "rxjs": "~6.6.0",
