--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "animate.css": "^4.1.1",
     "gsap": "^3.6.1",
     "ngx-owl-carousel-o": "^5.0.0",
     "rxjs": "~6.6.0",
